--- a/css/style.css
+++ b/css/style.css
@@ -545,6 +545,7 @@ header {
     padding: 0 2em 2em;
     max-width: 800px;
     margin: 0 auto;
+    position: relative;
 }
 
 .portfolio-item-individual p {
@@ -555,7 +556,5 @@ header {
 
 .portfolio-item-individual img {
     padding-bottom: 1em;
-    max-width: 700px;
-    margin-left: auto;
-    margin-right: auto;
+    max-width: 100%;
 }
