--- a/css/style.css
+++ b/css/style.css
@@ -557,4 +557,6 @@ header {
 .portfolio-item-individual img {
     padding-bottom: 1em;
     max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
